# PsSp

./: .clangd  .gitignore  .gitmodules  .tokeignore  CMakeLists.txt  CMakePresets.json  DevelopmentTools.md  DevelopmentTools.org  Doxyfile  LICENSE  Makefile  README.md  README.org  ToDo.md  ToDo.org  compile_flags.txt  notes.org  todo.org
.github/workflows/: cmake-macos-package.yml  cmake-macos.yml  cmake-ubuntu-package.yml  cmake-ubuntu.yml  cmake-windows-package.yml  cmake-windows.yml  first_actions.yml
docs/: annotated.html  annotated_dup.js  classes.html  classpssp_1_1AboutWindow-members.html  classpssp_1_1AboutWindow.html  classpssp_1_1AboutWindow.js  classpssp_1_1AboutWindow__coll__graph.map  classpssp_1_1AboutWindow__inherit__graph.md5  classpssp_1_1AboutWindow_a08bb768f8a3c0fe8881f0b712736c4b4_icgraph.map  classpssp_1_1AboutWindow_a08bb768f8a3c0fe8881f0b712736c4b4_icgraph.md5  classpssp_1_1AboutWindow_a8e54d553d67e6b181178243ce5b6d71d_cgraph.map  classpssp_1_1AboutWindow_a8e54d553d67e6b181178243ce5b6d71d_cgraph.md5  classpssp_1_1About__Window-members.html  classpssp_1_1About__Window.html  classpssp_1_1About__Window.js  classpssp_1_1About__Window__coll__graph.md5  classpssp_1_1About__Window__inherit__graph.map  classpssp_1_1About__Window_a417b537d20174e208eac18df9d96bd1c_icgraph.map  classpssp_1_1About__Window_a417b537d20174e208eac18df9d96bd1c_icgraph.md5  classpssp_1_1Application-members.html  classpssp_1_1Application.html  classpssp_1_1Application.js  classpssp_1_1Application__coll__graph.map  classpssp_1_1Application__coll__graph.md5  classpssp_1_1ConsoleSink-members.html  classpssp_1_1ConsoleSink.html  classpssp_1_1ConsoleSink.js  classpssp_1_1ConsoleSink__coll__graph.map  classpssp_1_1ConsoleSink__coll__graph.md5  classpssp_1_1Console__Sink-members.html  classpssp_1_1Console__Sink.html  classpssp_1_1Console__Sink.js  classpssp_1_1Console__Sink__inherit__graph.map  classpssp_1_1Console__Sink__inherit__graph.md5  classpssp_1_1Datasheet-members.html  classpssp_1_1Datasheet.html  classpssp_1_1Datasheet.js  classpssp_1_1Datasheet__coll__graph.map  classpssp_1_1Datasheet__coll__graph.md5  classpssp_1_1Datasheet_a67789ff9f37da3110f32ecf404a1226c_cgraph.map  (+211 more)
docs/doxygen/html/: About_8cpp.html  About_8cpp__incl.map  About_8cpp__incl.md5  About_8hpp.html  About_8hpp.js  About_8hpp__dep__incl.map  About_8hpp__dep__incl.md5  About_8hpp__incl.map  About_8hpp__incl.md5  About_8hpp_source.html  Application_8cpp.html  Application_8cpp__incl.map  Application_8cpp__incl.md5  Application_8hpp.html  Application_8hpp.js  Application_8hpp__dep__incl.map  Application_8hpp__dep__incl.md5  Application_8hpp__incl.map  Application_8hpp__incl.md5  Application_8hpp_source.html  Console__Sink_8hpp.html  Console__Sink_8hpp.js  Console__Sink_8hpp__dep__incl.map  Console__Sink_8hpp__dep__incl.md5  Console__Sink_8hpp__incl.map  Console__Sink_8hpp__incl.md5  Console__Sink_8hpp_source.html  Constants_8hpp.html  Constants_8hpp.js  Constants_8hpp__dep__incl.map  Constants_8hpp__dep__incl.md5  Constants_8hpp_source.html  Datasheet_8cpp.html  Datasheet_8cpp__incl.map  Datasheet_8cpp__incl.md5  Datasheet_8hpp.html  Datasheet_8hpp.js  Datasheet_8hpp__dep__incl.map  Datasheet_8hpp__dep__incl.md5  Datasheet_8hpp__incl.map  (+267 more)
docs/doxygen/latex/: About_8cpp__incl.md5  About_8hpp__dep__incl.md5  About_8hpp__incl.md5  Application_8cpp__incl.md5  Application_8hpp__dep__incl.md5  Application_8hpp__incl.md5  Console__Sink_8hpp__dep__incl.md5  Console__Sink_8hpp__incl.md5  Constants_8hpp__dep__incl.md5  Datasheet_8cpp__incl.md5  Datasheet_8hpp__dep__incl.md5  Datasheet_8hpp__incl.md5  Enums_8hpp__dep__incl.md5  Enums_8hpp__incl.md5  InputManager_8cpp__incl.md5  InputManager_8hpp__dep__incl.md5  InputManager_8hpp__incl.md5  Main_8cpp__incl.md5  Main_8hpp__dep__incl.md5  Main_8hpp__incl.md5  SheetManager_8cpp__incl.md5  SheetManager_8hpp__dep__incl.md5  SheetManager_8hpp__incl.md5  Status__Bar_8cpp__incl.md5  Status__Bar_8hpp__dep__incl.md5  Status__Bar_8hpp__incl.md5  Structs_8hpp__dep__incl.md5  Welcome_8cpp__incl.md5  Welcome_8hpp__dep__incl.md5  Welcome_8hpp__incl.md5  classpssp_1_1About__Window__inherit__graph.md5  (+47 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_11.js  enumvalues_12.js  enumvalues_2.js  enumvalues_3.js  (+52 more)
installers/macOS/: Readme.txt  Welcome.txt
macos_application/: Info.plist
old/: README.md  style_guidelines.md
scripts/: drag_n_drop.sh  format_lint.sh  make_docs.el  make_docs.sh  productbuild.sh
src/: main.cpp  style_guidelines.md  style_guidelines.org
src/Application/: Application.cpp  Application.hpp
src/Logging/: Console_Sink.hpp
src/Managers/: InputManager.cpp  SheetManager.cpp
src/Widgets/: Datasheet.cpp  Datasheet.hpp  StatusBar.cpp  Status_Bar.cpp  Status_Bar.hpp
src/Windows/: About.cpp  About.hpp  Main.cpp  Main.hpp  Welcome.cpp  Welcome.hpp
src/benchmarks/: sacio_bench.cpp  sacstream_bench.cpp
src/code/: main.cpp
src/docs/: index.md  index.org
src/documentation/: filters.bib  filters.tex
src/header/: pssp_data_pool.hpp  pssp_data_trees.hpp  pssp_datetime.hpp  pssp_fftw_planpool.hpp  pssp_misc.hpp  pssp_nary_tree.hpp  pssp_plotting.hpp  pssp_program_settings.hpp  pssp_projects.hpp  pssp_spectral.hpp  pssp_threadpool.hpp  pssp_windows.hpp  sac_spectral.hpp  thread_pool.hpp
src/implementation/: pssp_data_pool.cpp  pssp_data_trees.cpp  pssp_datetime.cpp  pssp_fftw_planpool.cpp  pssp_misc.cpp  pssp_program_settings.cpp  pssp_projects.cpp  pssp_spectral.cpp  pssp_threadpool.cpp  pssp_windows.cpp  sac_spectral.cpp
src/playground/: nary_tree_example.cpp
src/tests/: imgui_test.cpp  pssp_tests.cpp  sac_stream_fftw_test.cpp  sacio_tests.cpp  sacstream_tests.cpp  test1.cpp
(+112 files in other folders)
